kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    project: docker-k8s-capstone
    owner: vishnu
