kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-app
  namespace: capstone
  labels:
    app: capstone-app
    tier: backend
spec:
  replicas: 3   # number of pods
  selector:
    matchLabels:
      app: capstone-app
      tier: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: capstone-app
        tier: backend
    spec:
      containers:
      - name: go-app
        image: vkvishnu/go-app:1.0.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
