kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-service
  namespace: capstone
  labels:
    app: capstone-app
spec:
  selector:
    app: capstone-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
